Another media query addition, failsafe for screens smaller than 360px, ensure the header text isn't too big

--- a/style.css
+++ b/style.css
@@ -637,6 +637,12 @@ body {
 		margin-top: 15%;
 	}
 }
+@media screen and (max-width: 360px) {
+	#pageHeaderName {
+		width: 15rem;
+		font-size: 2rem;
+	}
+}
 
 /* marquee animation */
 .marquee img {
